InstanceKlass::_array_name is not needed and leaks

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 15
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b21

      The InstanceKlass::_array_name was introduced to have a pointer to decrement the refcount in the symbol [L<classname>; so that the class got unloaded, the array name is unloaded also. At that time, InstanceKlass::release_C_heap_structures() was only called for classes in the SystemDictionary. Now all the _klasses in the ClassLoaderData are walked and release_C_heap_structures can be called on Array classes also.

      At some point, maybe in permgen elimination, creating the array name called new_permanent_symbol so is never reclaimed.

      If the Klass::_name Symbol refcount is decremented during unloading for both ArrayKlass and InstanceKlass, there's no need for InstanceKlass::_array_name field.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: