8243503: InstanceKlass::_array_name is not needed and leaks

Decrement the refcount for all Klass in class unloading.

Reviewed-by: lfoltan, hseigel